# luonto

algtest/: Makefile  bst.cpp  hash.cpp
antwars/: index.html  script.js
countrylist/: README.txt  mrates-from-wiki.txt  parser.py
countrylist-node/: app.js  cmd.txt  data.txt  package.json
cwars/: cwars.py
daemon-example/: README.txt
daemon-example/daemonapp/: Makefile.am  configure.ac
daemon-example/daemonapp/src/: Makefile.am  daemonapp_api.c  daemonapp_api.h  daemonapp_private.h
daemon-example/daemonapp/tool/: Makefile.am  daemonapp_tool.c
daemon-example/daemonlib/: Makefile.am  configure.ac  libdaemonlib.pc.in
daemon-example/daemonlib/daemon/: Makefile.am  daemonlibd.c
daemon-example/daemonlib/init.d/: daemonlibd
daemon-example/daemonlib/src/: Makefile.am  daemonlib_api.c  daemonlib_api.h  daemonlib_private.h
daemon-example/daemonlib/tool/: Makefile.am  daemonlib_tool.c
dday/: app.js  package-lock.json  package.json  temp.js  temp_highs.js
diplomityo/: dtyo-bragge-noimg-en.txt  dtyo-bragge-noimg.txt  translate.py
fitness/: gecheck.txt  gecheck_12dec2025.txt  gecheck_24oct2024.txt  mifit_aggregated.csv  mifit_aggregated_feb26.csv
fruit_flip/: .gitignore  fruit.cpp  fruit.hh  fruit_flip.pro  mainwindow.cpp  mainwindow.hh  mainwindow.ui  moc_fruit.cpp  moc_mainwindow.cpp  qrc_mainwindow.cpp  ui_mainwindow.h
fsmtest/: fsm.c.expected  fsmgen.rb  fsmtest.c
fxboard/: README.txt  app.js  package.json
gameoflife/: .project  .pydevproject  README  main.py
go/: pair.go  path.go
js/: pair.js
maptrip/: .gitignore  example-all-in.txt  (+13 more)
(+349 files in other folders)
